src/internal/codegen/snapshots/hebi__internal__codegen__tests__generator_with_param.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
fn test(a):
  yield a
  return a

test()


# Func:
function `test` (registers: 2, length: 8, constants: 0)
.code
  0 | load r1
  2 | yield
  3 | load r1
  5 | return
  6 | load_none
  7 | return


function `main` (registers: 1, length: 8, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | load_global [1]; test
  6 | call0
  7 | return



