src/internal/codegen/snapshots/hebi__internal__codegen__tests__import_multi.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
from test.a0 import a1, a2
from test.b0 import b1, b2
print a1, a2
print b1, b2


# Func:
function `main` (registers: 7, length: 55, constants: 6)
.code
  0  | import [0]; test.a0
  2  | store r1
  4  | load r1
  6  | load_field [1]; a1
  8  | store r2
  10 | load r1
  12 | load_field [2]; a2
  14 | store r1
  16 | import [3]; test.b0
  18 | store r3
  20 | load r3
  22 | load_field [4]; b1
  24 | store r4
  26 | load r3
  28 | load_field [5]; b2
  30 | store r3
  32 | load r2
  34 | store r5
  36 | load r1
  38 | store r6
  40 | print_n r5, 2
  43 | load r4
  45 | store r5
  47 | load r3
  49 | store r6
  51 | print_n r5, 2
  54 | return



