src/internal/codegen/snapshots/hebi__internal__codegen__tests__loop_nested_while_break.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
loop:
  while true:
    break
  break


# Func:
function `main` (registers: 1, length: 12, constants: 3)
.code
  0  | load_true
  1  | jump_if_false 6
  3  | jump 4
  5  | jump_loop 5
  7  | jump 4
  9  | jump_loop 9
  11 | return



