src/internal/codegen/snapshots/hebi__internal__codegen__tests__method_call_n.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
o.f(1,2,3)

# Func:
function `main` (registers: 5, length: 22, constants: 2)
.code
  0  | load_global [1]; o
  2  | load_field [0]; f
  4  | store r1
  6  | load_smi 1
  8  | store r2
  10 | load_smi 2
  12 | store r3
  14 | load_smi 3
  16 | store r4
  18 | call r1, 3
  21 | return



